# GSpain

./: CMakeLists.txt
BeautifulFunction/: CMakeLists.txt  be_function.cpp  be_function.h
GKLS/: CMakeLists.txt  gkls_function.cpp  gkls_function.h  gkls_problem.cpp  gkls_problem.h
GlobalSearch/: CMakeLists.txt  evolvent.cpp  evolvent.h  extended.cpp  main.cpp
SRC/sample_src/: CMakeLists.txt  GKLSConstrainedProblem.hpp  GKLSConstrainedProblemFamily.hpp  GKLSProblem.cpp  GKLSProblem.hpp  GKLSProblemFamily.hpp  GrishaginConstrainedProblem.hpp  GrishaginConstrainedProblemFamily.hpp  GrishaginProblemFamily.hpp  HansenProblem.hpp  HansenProblemFamily.hpp  HillProblem.hpp  HillProblemFamily.hpp  OptSqConstrProblem.hpp  ShekelProblem.cpp  ShekelProblem.hpp  ShekelProblemFamily.hpp  grishagin_function.hpp  sample.cpp
SRC/src/: CMakeLists.txt  IConstrainedOptProblem.cpp  IConstrainedOptProblem.hpp  IGeneralOptProblem.hpp  IOptProblem.hpp  Tasks.cpp  Tasks.h
StronginC3/: CMakeLists.txt  stronginc3_problem.cpp  stronginc3_problem.h
_bin/: beFu.ilk  file_shekel.xml  gkls.ilk  grishagin.ilk  ra.ilk  strongin.ilk
cmake/: examin_lib.cmake  examin_mpi.cmake  examin_utils.cmake
mpfr/lib/win/vc12/x64/: mpfr.lib
mpfr/lib/win/vc9/x86/: mpir.lib
mpir/include/: gmp.h
mpir/lib/win/vc10/x64/: mpir.lib
mpir/lib/win/vc10/x86/: mpir.lib
mpir/lib/win/vc11/x64/: mpir.lib
mpir/lib/win/vc11/x86/: mpir.lib
mpir/lib/win/vc12/x64/: mpir.lib
mpir/lib/win/vc12/x86/: mpir.lib
mpir/lib/win/vc14/x64/: mpir.lib
mpir/lib/win/vc14/x86/: mpir.lib
mpir/lib/win/vc9/x64/: mpir.lib
mpreal/include/: mpreal.h
pugixml/: CMakeLists.txt
